# mwfractal

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.win  NEWS  NOTICE  README  README.md  THANKS  bootstrap  config.h.in  configure  configure.ac  mwfractal.dev  mwfractal.layout  toDoList.txt
lib/CImg-1.6.1/: README.txt
lib/CImg-1.6.1/examples/: CImg_demo.dev  CImg_demo.layout  Makefile  Makefile.win
lib/CImg-1.6.1/examples/img/: Makefile.win  main.cpp  tutorial.dev
lib/CImg-1.6.1/plugins/: patchmatch.h
lib/ImageMagick-6.9.1/Magick++/demo/: Makefile.win  demo.dev  demo.layout
lib/ImageMagick-6.9.1/magick/: magick-config.h  magick-config.h.gch
src/: ProgramOptions.cpp  ProgramOptions.hpp  main.cpp  utils.cpp  utils.hpp
src/colourizers/: Colourizer.cpp  Colourizer.hpp  MW_Darts_Violet_to_Red.cpp  MW_Darts_Violet_to_Red.hpp  NEM_Black_to_White.cpp  NEM_Black_to_White.hpp  NEM_Black_to_White_Converge_White.cpp  NEM_Black_to_White_Converge_White.hpp  NEM_Violet_to_Red.cpp  NEM_Violet_to_Red.hpp  NEM_Violet_to_Red_Lightness.cpp  NEM_Violet_to_Red_Lightness.hpp  NEM_White_to_Black.cpp  NEM_White_to_Black.hpp  NEM_White_to_Black_Converge_White.cpp  NEM_White_to_Black_Converge_White.hpp
src/generators/: Generator.cpp  Generator.hpp  Julia.cpp  Julia.hpp  Mandelbrot.cpp  Mandelbrot.hpp
src/image_wrapper/: LTexture.cpp  color_map.map  imageWrapper.cpp  imageWrapper.h
